# sundaygraph

./: .cursorignore  .cursorrules  .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  QUICKSTART.md  README.md  SETUP.md  cli.py  docker-compose.yml  ingest_seed_data.py  pyproject.toml  run_local.py  stop_backend.ps1
.cursor/: README.md  SUMMARY.md  VERIFICATION.md  context.md
.github/workflows/: README.md  SECRETS_SETUP.md  semantic-ci.yml
config/: config.yaml  ontology_schema.yaml
docs/: ARCHITECTURE.md  DESIGN_DECISIONS.md  MICROSERVICES.md  PROMOTION_BUNDLE.md  README.md  SNOWFLAKE_EXPORT.md  USAGE.md
examples/: README.md  basic_usage.py  custom_ontology.py  environments.json  golden_questions.yaml  sample_data.json
frontend/: .dockerignore  Dockerfile  README.md  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/components/: data-input.tsx  data-view.tsx  file-preview.tsx  file-upload-handler.ts  sidebar.tsx
migrations/: 001_create_odl_tables.sql  002_create_ontology_diff_table.sql  003_create_cortex_regression_table.sql  README.md  run_migrations.py
odl/: README.md  validate_odl.py
odl/examples/: snowflake_retail.odl.json
odl/schema/: odl.schema.json
src/: __init__.py
src/agents/: __init__.py  base_agent.py  data_ingestion_agent.py  graph_construction_agent.py  ontology_agent.py  query_agent.py  schema_inference_agent.py
src/api/: __init__.py  app.py  main.py
src/cli/: __init__.py  main.py  snowflake.py
tests/: __init__.py  run_odl_tests.py  test_agents.py  test_compiler.py  test_compiler_simple.py  test_cortex_regression.py  test_drift_detection.py  test_graph_store.py  test_odl.py  test_odl_diff.py  test_odl_store.py  test_ontology.py  test_promotion_bundle.py  test_snowflake_compiler_golden.py  test_snowflake_compiler_golden_simple.py  test_snowflake_compiler_integration.py  test_snowflake_export.py
(+56 files in other folders)
